<resources>
    <string name="app_name">Language Translation Example</string>
    <string name="translation_label">Translation:</string>
    <string name="translate">translate</string>
    <string name="input_hint">enter text</string>
    <string name="target_language">Target Language</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="microphone">Microphone</string>
    <string name="play">Play</string>
    <string name="visual_age_default">0</string>
    <string name="visual_age_min">Min Age:</string>
    <string name="visual_age_max">Max Age</string>
    <string name="visual_gender">Gender</string>
</resources>
