<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tinkersstudio.watsonassistance.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_language"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/target_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:checked="true" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french" />

        <RadioButton
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint" />

        <ImageButton
            android:id="@+id/mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/microphone" />

    </LinearLayout>

    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/translation_label"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/translated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_age_min"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visual_age_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_age_default"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_age_max"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visual_age_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_age_default"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_gender"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visual_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/visual_age_default"
            android:padding="5dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loaded_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        />

</LinearLayout>
